--- a/serverless.yml
+++ b/serverless.yml
@@ -5,8 +5,6 @@ frameworkVersion: '3'
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: dev
-  region: ap-south-1
 
 functions:
   hello:
@@ -15,6 +13,17 @@ functions:
       - http:
           path: data
           method: get
+          cors: true
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+              - X-Amzn-Trace-Id
+            allowCredentials: false
 
   postData:
     handler: handler.postData
@@ -22,3 +31,14 @@ functions:
       - http:
           path: data
           method: post
+          cors: true
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+              - X-Amzn-Trace-Id
+            allowCredentials: false
